# llm-bug-bench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.run_test  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
benchmarks/go/: 002_deadlock_mutex_order.yaml  005_missing_error_handling_grpc.yaml
benchmarks/python/: 001_race_condition_shared_list.yaml  003_retry_exponential_backoff_bug.yaml  005_async_cancel_leak.yaml
benchmarks/theory/: 001_cap_theorem.yaml  002_byzantine_fault_tolerance.yaml
bizwatcher/: __main__.py  client.py  exceptions.py  judge.py  loader.py  metrics.py  models.py  results.py  runner.py  web.py
bizwatcher/core/: judge.py  leaderboard.py  llm_client.py  llm_protocol.py  loader.py  ollama_manager.py  results.py  runner.py
bizwatcher/templates/: base.html  compare.html  dashboard.html  leaderboard.html  run_detail.html  test_detail.html
bizwatcher/templates/ollama/: models.html
bizwatcher/templates/partials/: _leaderboard_table.html  _score_badge.html
bizwatcher/templates/runs/: new.html  progress.html
bizwatcher/templates/tests/: detail.html  form.html  list.html
bizwatcher/web/: app.py  dependencies.py  task_manager.py
src/: __main__.py  exceptions.py  metrics.py  models.py
src/core/: judge.py  leaderboard.py  llamacpp_manager.py  llm_client.py  llm_protocol.py  loader.py  ollama_manager.py  pricing.py  results.py  runner.py
src/templates/: base.html  compare.html  dashboard.html  leaderboard.html  run_detail.html  test_detail.html
src/web/: app.py  dependencies.py  task_manager.py
tests/: conftest.py  test_web_routes.py
tests/go/: 001_race_condition_counter.yaml  002_deadlock_mutex_order.yaml  003_channel_misuse_unbuffered.yaml  004_retry_off_by_one.yaml  005_missing_error_handling_grpc.yaml
tests/python/: 001_race_condition_shared_list.yaml  002_deadlock_threading_lock.yaml  003_retry_exponential_backoff_bug.yaml  004_missing_error_handling_socket.yaml  005_async_cancel_leak.yaml
tests/theory/: 001_cap_theorem.yaml  002_byzantine_fault_tolerance.yaml
(+32 files in other folders)
