[project]
name = "bizantine-watcher"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrieldiem",email = "gabriel.diem5@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.30.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
